# AsyncLogger

./: .gitignore  CMakeLists.txt  README.md
include/AsyncLogger/: AsyncLogger.h  LogLevel.h  LogMessage.h  Logger.h  LoggerConfig.h
src/: AsyncLogger.cpp  LogMessage.cpp  Logger.cpp  LoggerConfig.cpp  main.cpp
